[package]
name = "routerify-lite"
version = "0.1.0"
authors = ["kingluo <home_king@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hyper = {version="0.14.7", features=["full"]}
futures = "0.3.14"
futures-util = "0.3.14"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
